...
            Column(
                modifier = Modifier
                    .weight(2f)
                    .fillMaxHeight()
            ) {
                TripTotal(
                    distance = "%,.2f".format(state.trip.total.div(1000f)),
                    onClick = {},
                    modifier = Modifier
                        .weight(.9f)
                        .padding(horizontal = padding),
                )
                HorizontalDivider()
...
